[project]
name = "pic-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.27.0",
    "typer[all]>=0.12.4",
    "rich==13.7.1",
    "apscheduler>=3.11.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy"
]

[dependency-groups]
dev = [
    "types-aiofiles>=24.1.0.20250822",
]
